add links to reports

--- a/_posts/2018-04-12-week3.md
+++ b/_posts/2018-04-12-week3.md
@@ -12,3 +12,4 @@ description: 第二次团队作业文档索引
 - [Backend Coding Standard](https://github.com/Chun-Ge/documents/blob/master/technical-docs/backend-code-standard.md)
 - [Frontend Coding Standard](https://github.com/Chun-Ge/documents/blob/master/technical-docs/web-frontend-code-standard.md)
 - [Frontend UI Standard](https://github.com/Chun-Ge/documents/blob/master/technical-docs/web-ui-standard.md)
+- [Technical Report Collection](https://github.com/Chun-Ge/documents/tree/master/reports)
