Modify alexandrali's first tech report

--- a/reports/15331172-report-4-15.md
+++ b/reports/15331172-report-4-15.md
@@ -35,3 +35,5 @@ _15331172 李奕蓁 计算机应用软件_
 我负责设计并绘制项目的UI流图。首先，我研究了我们组已经完成的UI草稿，从中提取出所有的UI界面，包括`主页面`，`帖子详情页`，`登陆页面`，`个人主页`等。
 
 接着，对于每一个UI页面中所有涉及到页面跳转的功能，我设计相应的跳转按钮，并连接到对应的UI页面上。在完成所有以上的操作后我再仔细检查一遍对于每个页面是否每个相应的涉及到页面跳转的功能都有对应的按钮与箭头指向。
+
+[UI流图](https://github.com/Chun-Ge/documents/blob/master/model-docs/ui-flow-diagram.pdf)
