--- a/reports/15331058-report-4-15.md
+++ b/reports/15331058-report-4-15.md
@@ -1,1 +1,10 @@
+第一次技术报告
+--
+15331058
 
+我在项目中的任务是前端 UI 设计，上周我借用同学的数位板手绘了几张 UI 草图（见 [ui-sketches](https://github.com/Chun-Ge/documents/tree/master/model-docs/ui-sketches)）
+
+我参考了 [Google+](https://plus.google.com) 和 [Pinterest](https://www.pinterest.com) 的瀑布流布局，准备使用响应式设计适配不同设备。经小组讨论，该方案可行，
+
+
+下一步将使用 [Webflow](https://webflow.com) 等网站设计工具绘制更具体的设计图
