--- a/reports/15331146-report-4-15.md
+++ b/reports/15331146-report-4-15.md
@@ -1,1 +1,27 @@
 
+# 第一次技术报告
+15331146 李海航 简析一下我们树洞系统后端技术中数据库的选择
+
+## 为何选择MySQL
+### 1.开源和低成本
+MySQL作为开源的支持多用户、高并发的数据库，针对中小性项目的普及性很强，有大量的插件支持和文档可循。MySQL学习成本低，易学易用。
+### 2.高扩展与分布式支持
+可扩展性，即通过增加资源提升整个系统吞吐量的能力，MySQL对扩展性的支持已经非常成熟。支持横向扩展、集群扩展、内向扩展等等。分布式mySQL集群是个不错的分布式数据库选择。
+### 3.优秀的存储引擎
+MySQL最主要的四个存储引擎是InnoDB、MyISAM、MEMORY、MERGE,其中最常用的是InnoDB和MyISAM
+#### 1.MyISAM存储引擎
+不支持事务、也不支持外键，优势是访问速度快，对事务完整性没有 要求或者以select，insert为主的应用基本上可以用这个引擎来创建表
+
+支持3种不同的存储格式，分别是：静态表；动态表；压缩表
+
+
+#### 2. InnoDB存储引擎
+InnoDB是一个健壮的事务型存储引擎，这种存储引擎已经被很多互联网公司使用，为用户操作非常大的数据存储提供了一个强大的解决方案
+
+* 更新密集的表。InnoDB存储引擎特别适合处理多重并发的更新请求。
+* 事务。InnoDB存储引擎是支持事务的标准MySQL存储引擎。
+* 自动灾难恢复。与其它存储引擎不同，InnoDB表能够自动从灾难中恢复。
+* 外键约束。MySQL支持外键的存储引擎只有InnoDB。
+* 支持自动增加列AUTO_INCREMENT属性。
+
+一般来说，如果需要事务支持，并且有较高的并发读取频率，InnoDB是不错的选择。
