update homework submission

--- a/_posts/2018-04-12-week6.md
+++ b/_posts/2018-04-12-week6.md
@@ -8,7 +8,7 @@ description: 第二次团队作业文档索引
 ---
 
 - [Use-case diagram](https://github.com/Chun-Ge/documents/blob/master/model-docs/use-case-model.uxf)
-- [Use-case document](#)
+- [Use-case document](https://github.com/Chun-Ge/documents/blob/master/model-docs/use-case-model.md)
 - [UI prototype design](https://github.com/Chun-Ge/documents/tree/master/model-docs/ui-sketches)
 - [Backend Coding Standard](https://github.com/Chun-Ge/documents/blob/master/technical-docs/backend-code-standard.md)
 - [Frontend Coding Standard](https://github.com/Chun-Ge/documents/blob/master/technical-docs/web-frontend-code-standard.md)
