--- a/_posts/2018-04-27-week7.md
+++ b/_posts/2018-04-27-week7.md
@@ -8,4 +8,4 @@ description: 第三次团队作业文档索引
 ---
 
 [domain model](https://github.com/Chun-Ge/documents/blob/master/model-docs/domain-model/domain-model.png)
-[database design](#)
+[database design](https://github.com/Chun-Ge/documents/blob/master/model-docs/database-model.pdf)
