update xmq final report git-log

--- a/docs/reports/final/15331344.md
+++ b/docs/reports/final/15331344.md
@@ -33,16 +33,41 @@ _注：项目经理没有参与编码_
 
 ## Git Log
 
-为了阅读清晰考虑，以下git log由命令 `git log --author=VinaLx`生成。
+为了阅读清晰考虑，以下git log由命令 `git log --author=VinaLx --stat`生成。
 
 你可以在[document仓库的commit记录](https://github.com/Chun-Ge/documents/commits/master)核验
 
 ```
+commit 9b38c862f490c6732984f48a81c18b209de94c2f
+Author: VinaLx <vinaleux@gmail.com>
+Date:   Tue Jun 26 00:19:28 2018 +0800
+
+    update github pages index
+
+ docs/index.md                                          | 18 ++++++++++++++++++
+ ...chitacture_problems.md => architecture-problems.md} |  0
+ ...olution_description.md => architecture-solution.md} |  0
+ 3 files changed, 18 insertions(+)
+
+commit fdac5f12b9e9077fc9411164bfa9147c25972c9b
+Author: VinaLx <vinaleux@gmail.com>
+Date:   Tue Jun 26 00:03:59 2018 +0800
+
+    add xmq final report
+
+ docs/reports/final/15331344.md | 268 +++++++++++++++++++++++++++++++++++++++++
+ 1 file changed, 268 insertions(+)
+
 commit 7efc73b0a0f2dccb2ef1cf88195678e183855622
 Author: VinaLx <vinaleux@gmail.com>
 Date:   Mon Jun 25 20:07:00 2018 +0800
 
     finish relationship between blablabla
+
+ .../physical-view}/phyview.png                              | Bin
+ .../physical-view}/phyview.uxf                              |   0
+ docs/reports/logic-architecture-ecb.md                      |   9 +++++++++
+ 3 files changed, 9 insertions(+)
 
 commit c8afd44129530d9f4b009daa92cfd9aa2fd676f4
 Author: VinaLx <vinaleux@gmail.com>
@@ -50,11 +75,34 @@ Date:   Mon Jun 25 10:29:03 2018 +0800
 
     add final report stub
 
+ docs/reports/Readme.md                             | 24 ++++++++++++++--------
+ docs/reports/final/15331058.md                     |  0
+ docs/reports/final/153311184.md                    |  0
+ docs/reports/final/15331142.md                     |  0
+ docs/reports/final/15331146.md                     |  0
+ docs/reports/final/15331172.md                     |  0
+ docs/reports/final/15331302.md                     |  0
+ docs/reports/final/15331344.md                     |  0
+ docs/reports/final/15331441.md                     |  0
+ .../{ => technical}/15331058-report-4-15.md        |  0
+ .../{ => technical}/15331142-report-4-15.md        |  0
+ .../{ => technical}/15331146-report-4-15.md        |  0
+ .../{ => technical}/15331172-report-4-15.md        |  0
+ .../{ => technical}/15331184-report-4-14.md        |  0
+ .../{ => technical}/15331302-report-4-13.md        |  0
+ .../{ => technical}/15331344-report-4-12.md        |  0
+ .../{ => technical}/15331441-report-4-15.md        |  0
+ 17 files changed, 16 insertions(+), 8 deletions(-)
+
 commit bd0c4aef5aaa1dd68940c3a1bfe2244bffda3e3c
 Author: VinaLx <vinaleux@gmail.com>
 Date:   Wed May 30 12:52:15 2018 +0800
 
     add supplement requirement
+
+ docs/index.md                                  |  2 ++
+ docs/management-docs/supplement-requirement.md | 45 ++++++++++++++++++++++++++
+ 2 files changed, 47 insertions(+)
 
 commit f626c7c9cd054b5aa79075e69cba5c166c6ea30f
 Merge: 0f2b384 6bd8868
@@ -69,11 +117,18 @@ Date:   Tue May 29 17:47:23 2018 +0800
 
     5-29 meeting update
 
+ docs/management-docs/about.md                      |  50 +++++++++++++++------
+ .../meeting-mind-graphs/05-29-2018-iteration-3.png | Bin 0 -> 108375 bytes
+ 2 files changed, 37 insertions(+), 13 deletions(-)
+
 commit c7ae438d17a9b6177d57b2a8527907681a6d8c3a
 Author: VinaLx <vinaleux@gmail.com>
 Date:   Sat May 5 16:04:30 2018 +0800
 
     adjust readme to the new document structure
+
+ Readme.md | 20 ++++++++++++--------
+ 1 file changed, 12 insertions(+), 8 deletions(-)
 
 commit 4a4d641b9d2970fe291d2fc119bf88a06a04956a
 Author: VinaLx <vinaleux@gmail.com>
@@ -81,11 +136,19 @@ Date:   Sat May 5 15:58:11 2018 +0800
 
     fix baseurl again...
 
+ docs/_config.yml                 | 2 +-
+ docs/jekyll/layouts/gallary.html | 2 +-
+ 2 files changed, 2 insertions(+), 2 deletions(-)
+
 commit 64f1da845815d1b15c9d665f9e087e1a61fa5912
 Author: VinaLx <vinaleux@gmail.com>
 Date:   Sat May 5 15:47:52 2018 +0800
 
     fix base url
+
+ docs/_config.yml                 | 2 ++
+ docs/jekyll/layouts/gallary.html | 2 +-
+ 2 files changed, 3 insertions(+), 1 deletion(-)
 
 commit 6a1686bde2a3366a54051b8622ad14043b65aeea
 Author: VinaLx <vinaleux@gmail.com>
@@ -93,11 +156,91 @@ Date:   Sat May 5 15:07:36 2018 +0800
 
     add gallary layout, optimize multiple picture display
 
+ .gitignore                                         |   1 +
+ docs/_config.yml                                   |   7 +-
+ docs/index.md                                      |   6 +-
+ docs/jekyll/layouts/default.html                   |  75 +++++++++++++++++++++
+ docs/jekyll/layouts/gallary.html                   |  19 ++++++
+ docs/management-docs/investigation.md              |   6 +-
+ docs/meeting-mind-graphs/03-23-2018-inception.png  | Bin 0 -> 657983 bytes
+ .../meeting-mind-graphs/03-30-2018-iteration-1.png | Bin 0 -> 284557 bytes
+ .../meeting-mind-graphs/04-08-2018-iteration-1.png | Bin 0 -> 71210 bytes
+ .../meeting-mind-graphs/04-13-2018-iteration-1.png | Bin 0 -> 108234 bytes
+ .../meeting-mind-graphs/04-20-2018-iteration-2.png | Bin 0 -> 142721 bytes
+ .../meeting-mind-graphs/04-27-2018-iteration-2.png | Bin 0 -> 104628 bytes
+ .../meeting-mind-graphs/05-04-2018-iteration-2.png | Bin 0 -> 224499 bytes
+ docs/meeting-mind-graphs/3-23-2018-inception.pdf   | Bin 46517 -> 0 bytes
+ docs/meeting-mind-graphs/3-30-2018-iteration-1.pdf | Bin 31151 -> 0 bytes
+ docs/meeting-mind-graphs/4-13-2018-iteration-1.pdf | Bin 19564 -> 0 bytes
+ docs/meeting-mind-graphs/4-20-2018-iteration-2.pdf | Bin 22571 -> 0 bytes
+ docs/meeting-mind-graphs/4-27-2018-iteration-2.pdf | Bin 20663 -> 0 bytes
+ docs/meeting-mind-graphs/4-8-2018-iteration-1.pdf  | Bin 16410 -> 0 bytes
+ docs/meeting-mind-graphs/5-4-2018-iteration-2.pdf  | Bin 26689 -> 0 bytes
+ docs/meeting-mind-graphs/meeting-index-jekyll.md   |   4 ++
+ .../system-sequence-diagram/ssd-index-jekyll.md    |   4 ++
+ .../ui-design/{banner.png => the-banner.png}       | Bin
+ docs/model-docs/ui-design/ui-index-jekyll.md       |   4 ++
+ 24 files changed, 119 insertions(+), 7 deletions(-)
+
 commit d2923ef934cfd43134ffaba9dffd599491a7525e
 Author: VinaLx <vinaleux@gmail.com>
 Date:   Sat May 5 13:50:22 2018 +0800
 
     host pages on doc/ @master
+
+ .gitignore                                         |   1 +
+ docs/Gemfile                                       |   1 +
+ docs/_config.yml                                   |  14 ++++++
+ docs/index.md                                      |  52 +++++++++++++++++++++
+ {management-docs => docs/management-docs}/about.md |   0
+ .../management-docs}/investigation.md              |   0
+ .../management-docs}/product.md                    |  11 ++++-
+ .../management-docs}/team-profile.md               |   0
+ .../management-docs}/vision.md                     |   0
+ .../meeting-mind-graphs}/3-23-2018-inception.pdf   | Bin
+ .../meeting-mind-graphs}/3-30-2018-iteration-1.pdf | Bin
+ .../meeting-mind-graphs}/4-13-2018-iteration-1.pdf | Bin
+ .../meeting-mind-graphs}/4-20-2018-iteration-2.pdf | Bin
+ .../meeting-mind-graphs}/4-27-2018-iteration-2.pdf | Bin
+ .../meeting-mind-graphs}/4-8-2018-iteration-1.pdf  | Bin
+ .../meeting-mind-graphs}/5-4-2018-iteration-2.pdf  | Bin
+ {model-docs => docs/model-docs}/database-model.pdf | Bin
+ .../model-docs}/domain-model/domain-model.png      | Bin
+ .../model-docs}/domain-model/domain-model.uxf      |   0
+ .../model-docs}/state-diagram/state-diagram.png    | Bin
+ .../model-docs}/state-diagram/state-diagram.uxf    |   0
+ .../system-sequence-diagram/15331344-login.png     | Bin
+ .../model-docs}/system-sequence-diagram/Readme.md  |   0
+ .../model-docs/ui-design}/banner.png               | Bin
+ .../model-docs/ui-design}/comment.png              | Bin
+ .../model-docs/ui-design}/new-post.png             | Bin
+ .../model-docs/ui-design}/notifications-empty.png  | Bin
+ .../model-docs/ui-design}/reply-to-comment.png     | Bin
+ .../model-docs/ui-design}/sidebar.png              | Bin
+ .../ui-design}/thread-preview-with-comments.png    | Bin
+ .../model-docs/ui-design}/threads.png              | Bin
+ .../model-docs/ui-design}/view-thread.png          | Bin
+ .../model-docs}/ui-flow-diagram.pdf                | Bin
+ .../model-docs}/use-case-model/use-case-model.md   |   0
+ .../model-docs}/use-case-model/use-case-model.png  | Bin
+ .../model-docs}/use-case-model/use-case-model.uxf  |   0
+ {reports => docs/reports}/15331058-report-4-15.md  |   0
+ {reports => docs/reports}/15331142-report-4-15.md  |   0
+ {reports => docs/reports}/15331146-report-4-15.md  |   0
+ {reports => docs/reports}/15331172-report-4-15.md  |   0
+ {reports => docs/reports}/15331184-report-4-14.md  |   0
+ {reports => docs/reports}/15331302-report-4-13.md  |   0
+ {reports => docs/reports}/15331344-report-4-12.md  |   0
+ {reports => docs/reports}/15331441-report-4-15.md  |   0
+ docs/reports/Readme.md                             |  34 ++++++++++++++
+ .../technical-docs}/backend-code-standard.md       |   0
+ .../technical-docs}/backend-tech-stack.md          |   0
+ .../technical-docs}/http-restful-api-standard.md   |   0
+ .../technical-docs}/logical-database-design.pdf    | Bin
+ .../technical-docs}/web-frontend-code-standard.md  |   0
+ .../technical-docs}/web-frontend-tech-stack.md     |   0
+ .../technical-docs}/web-ui-standard.md             |   0
+ 52 files changed, 112 insertions(+), 1 deletion(-)
 
 commit 6fd467242a37bb2137528b48f7070960325803ed
 Author: VinaLx <vinaleux@gmail.com>
@@ -105,11 +248,27 @@ Date:   Sat May 5 02:54:10 2018 +0800
 
     cleanup and rearrange
 
+ .gitignore                                         |   3 +++
+ {model-docs => drafts}/ui-sketches/homepage.png    | Bin
+ {model-docs => drafts}/ui-sketches/newthread.png   | Bin
+ {model-docs => drafts}/ui-sketches/profile.png     | Bin
+ {model-docs => drafts}/ui-sketches/search.png      | Bin
+ {model-docs => drafts}/ui-sketches/signin.png      | Bin
+ {model-docs => drafts}/ui-sketches/signup.png      | Bin
+ {model-docs => drafts}/ui-sketches/threads.png     | Bin
+ model-docs/{ => use-case-model}/use-case-model.md  |   0
+ model-docs/use-case-model/use-case-model.png       | Bin 0 -> 75800 bytes
+ model-docs/{ => use-case-model}/use-case-model.uxf |   0
+ 11 files changed, 3 insertions(+)
+
 commit db6f0633ae5a5f15e5fcfedb0a6dc685d202e311
 Author: VinaLx <vinaleux@gmail.com>
 Date:   Sat May 5 00:14:59 2018 +0800
 
     add login SSD
+
+ model-docs/system-sequence-diagram/15331344-login.png | Bin 0 -> 22682 bytes
+ 1 file changed, 0 insertions(+), 0 deletions(-)
 
 commit 469815b7eb6de8342cdf1c6b703f595c3b91ce74
 Merge: 8593d87 668da89
@@ -124,6 +283,12 @@ Date:   Fri May 4 16:00:48 2018 +0800
 
     5-4 meeting update
 
+ management-docs/about.md                           |  27 ++++++++++++++++++---
+ meeting-mind-graphs/5-4-2018-iteration-2.pdf       | Bin 0 -> 26689 bytes
+ .../system-sequence-diagram/15331344-login.png     |   0
+ model-docs/system-sequence-diagram/Readme.md       |   5 ++++
+ 4 files changed, 28 insertions(+), 4 deletions(-)
+
 commit e880d59d09dc0769911820e913f203d357e4cdd8
 Merge: a9d7f11 f94272c
 Author: VinaLx <vinaleux@gmail.com>
@@ -137,11 +302,18 @@ Date:   Sun Apr 29 13:37:42 2018 +0800
 
     add student number to team profile
 
+ management-docs/team-profile.md | 20 ++++++++++----------
+ 1 file changed, 10 insertions(+), 10 deletions(-)
+
 commit 59985057d426b16fa8133d430bd14f95e860ef8a
 Author: VinaLx <vinaleux@gmail.com>
 Date:   Fri Apr 27 15:04:01 2018 +0800
 
     update meeting record and about.md
+
+ management-docs/about.md                      |  15 +++++++++++++--
+ meeting-mind-graphs/4-27-2018-iteration-2.pdf | Bin 0 -> 20663 bytes
+ 2 files changed, 13 insertions(+), 2 deletions(-)
 
 commit f5a8d87fea39041a928e2281ecad9a5f9061560f
 Author: VinaLx <vinaleux@gmail.com>
@@ -149,11 +321,18 @@ Date:   Fri Apr 20 15:14:28 2018 +0800
 
     refine use case diagram
 
+ model-docs/use-case-model.uxf | 418 +++++++++++++++++++++++-------------------
+ 1 file changed, 231 insertions(+), 187 deletions(-)
+
 commit 9b359651888c218a2cc116caab3323a0aa24fc0f
 Author: VinaLx <vinaleux@gmail.com>
 Date:   Fri Apr 20 14:36:58 2018 +0800
 
     update meeting record and about.md
+
+ management-docs/about.md                      |  23 +++++++++++++++++++----
+ meeting-mind-graphs/4-20-2018-iteration-2.pdf | Bin 0 -> 22571 bytes
+ 2 files changed, 19 insertions(+), 4 deletions(-)
 
 commit a34c570c3f60ac1a376b090cc4e449181d943ed8
 Author: VinaLx <vinaleux@gmail.com>
@@ -161,11 +340,38 @@ Date:   Fri Apr 20 12:38:07 2018 +0800
 
     fix use-case-model
 
+ model-docs/use-case-model.uxf | 363 +++++++++++++++++++++---------------------
+ 1 file changed, 185 insertions(+), 178 deletions(-)
+
 commit 5b316f41206bcf54ff9babcca2639710fdb83811
 Author: VinaLx <vinaleux@gmail.com>
 Date:   Fri Apr 20 10:12:48 2018 +0800
 
     delete mysteriously appeared flow draft
+
+ flow-draft/README.md                                   |   5 -----
+ flow-draft/certification-page/README.md                |   3 ---
+ .../certification-page/certification-page-note.pdf     | Bin 199815 -> 0 bytes
+ flow-draft/certification-page/certification-page.vsdx  | Bin 23773 -> 0 bytes
+ flow-draft/content-view/README.md                      |   3 ---
+ flow-draft/content-view/content-view-note.pdf          | Bin 250966 -> 0 bytes
+ flow-draft/content-view/content-view.vsdx              | Bin 22332 -> 0 bytes
+ flow-draft/login-page/README.md                        |   3 ---
+ flow-draft/login-page/login-page-note.pdf              | Bin 197341 -> 0 bytes
+ flow-draft/login-page/login-page.vsdx                  | Bin 23285 -> 0 bytes
+ flow-draft/logo/README.md                              |   4 ----
+ flow-draft/logo/chunge.png                             | Bin 8217 -> 0 bytes
+ flow-draft/logo/logo_draft.jpg                         | Bin 146182 -> 0 bytes
+ flow-draft/logo/logo_sysu.jpg                          | Bin 301641 -> 0 bytes
+ flow-draft/main-page/README.md                         |   3 ---
+ flow-draft/main-page/main-page-note.pdf                | Bin 190189 -> 0 bytes
+ flow-draft/main-page/main-page.vsdx                    | Bin 23281 -> 0 bytes
+ flow-draft/overview.vsdx                               | Bin 72525 -> 0 bytes
+ flow-draft/overview_note.pdf                           | Bin 222265 -> 0 bytes
+ flow-draft/profile-view/README.md                      |   3 ---
+ flow-draft/profile-view/profile-view.pdf               | Bin 246296 -> 0 bytes
+ flow-draft/profile-view/profile-view.vsdx              | Bin 22527 -> 0 bytes
+ 22 files changed, 24 deletions(-)
 
 commit d34428e7326035909c77238d2c7ca2ee887f75b0
 Merge: 73635ce 48f0506
@@ -180,11 +386,18 @@ Date:   Fri Apr 13 18:01:23 2018 +0800
 
     update 4-13 meeting
 
+ management-docs/about.md                      |  26 ++++++++++++++++++++------
+ meeting-mind-graphs/4-13-2018-iteration-1.pdf | Bin 0 -> 19564 bytes
+ 2 files changed, 20 insertions(+), 6 deletions(-)
+
 commit 7c9fca00c86beafc44f61fa5160ebc63f47f2ef6
 Author: VinaLx <vinaleux@gmail.com>
 Date:   Thu Apr 12 23:56:27 2018 +0800
 
     add xmq tech report
+
+ reports/15331344-report-4-12.md | 27 +++++++++++++++++++++++++++
+ 1 file changed, 27 insertions(+)
 
 commit f1d802010c8c7a9650072ea43541119efe56a531
 Author: VinaLx <vinaleux@gmail.com>
@@ -192,11 +405,18 @@ Date:   Sun Apr 8 14:57:41 2018 +0800
 
     update meeting record
 
+ management-docs/about.md                     |  29 +++++++++++++++++++--------
+ meeting-mind-graphs/4-8-2018-iteration-1.pdf | Bin 0 -> 16410 bytes
+ 2 files changed, 21 insertions(+), 8 deletions(-)
+
 commit 071080a941098fa0511e734361e8a5f14cabf75d
 Author: VinaLx <vinaleux@gmail.com>
 Date:   Sun Apr 8 14:40:30 2018 +0800
 
     rename UI to ui
+
+ model-docs/{UI-flow-diagram.pdf => ui-flow-diagram.pdf} | Bin
+ 1 file changed, 0 insertions(+), 0 deletions(-)
 
 commit 0a157d4f5d4f3313522f584af10c05de4b3d347c
 Author: VinaLx <vinaleux@gmail.com>
@@ -204,11 +424,21 @@ Date:   Fri Mar 30 22:25:16 2018 +0800
 
     cleanup repository, update Readme
 
+ Readme.md                                          |  19 +++-
+ model-docs/logical_database_design.pdf             | Bin 62645 -> 0 bytes
+ technical-docs/backend-tech-stack.md               | 119 +++------------------
+ .../logical-database-design.pdf                    | Bin
+ technical-docs/logical_database_design.pdf         | Bin 62645 -> 0 bytes
+ 5 files changed, 27 insertions(+), 111 deletions(-)
+
 commit 85a011913622726ca997468aef9378588ae2f86a
 Author: VinaLx <vinaleux@gmail.com>
 Date:   Fri Mar 30 20:00:00 2018 +0800
 
     update about.md
+
+ management-docs/about.md | 43 +++++++++++++++++++++++++++++++++++--------
+ 1 file changed, 35 insertions(+), 8 deletions(-)
 
 commit 85e01db00e242aee95a0900401c820a325ecc6ae
 Author: VinaLx <vinaleux@gmail.com>
@@ -216,11 +446,64 @@ Date:   Fri Mar 30 19:28:56 2018 +0800
 
     add week4 meeting record
 
+ meeting-mind-graphs/3-30-2018-iteration-1.pdf | Bin 0 -> 31151 bytes
+ 1 file changed, 0 insertions(+), 0 deletions(-)
+
 commit e6584db8b4ca590aef16b621d5b1e46ed3461d61
 Author: VinaLx <vinaleux@gmail.com>
 Date:   Fri Mar 30 19:26:07 2018 +0800
 
     move peer-analysis and flow-drafts to drafts/
+
+ {flow-draft => drafts/flow-draft}/README.md                 |   0
+ .../flow-draft}/certification-page/README.md                |   0
+ .../certification-page/certification-page-note.pdf          | Bin
+ .../flow-draft}/certification-page/certification-page.vsdx  | Bin
+ {flow-draft => drafts/flow-draft}/content-view/README.md    |   0
+ .../flow-draft}/content-view/content-view-note.pdf          | Bin
+ .../flow-draft}/content-view/content-view.vsdx              | Bin
+ {flow-draft => drafts/flow-draft}/login-page/README.md      |   0
+ .../flow-draft}/login-page/login-page-note.pdf              | Bin
+ .../flow-draft}/login-page/login-page.vsdx                  | Bin
+ {flow-draft => drafts/flow-draft}/logo/README.md            |   0
+ {flow-draft => drafts/flow-draft}/logo/chunge.png           | Bin
+ {flow-draft => drafts/flow-draft}/logo/logo_draft.jpg       | Bin
+ {flow-draft => drafts/flow-draft}/logo/logo_sysu.jpg        | Bin
+ {flow-draft => drafts/flow-draft}/main-page/README.md       |   0
+ .../flow-draft}/main-page/main-page-note.pdf                | Bin
+ {flow-draft => drafts/flow-draft}/main-page/main-page.vsdx  | Bin
+ {flow-draft => drafts/flow-draft}/overview.vsdx             | Bin
+ {flow-draft => drafts/flow-draft}/overview_note.pdf         | Bin
+ {flow-draft => drafts/flow-draft}/profile-view/README.md    |   0
+ .../flow-draft}/profile-view/profile-view.pdf               | Bin
+ .../flow-draft}/profile-view/profile-view.vsdx              | Bin
+ {peer-analysis => drafts/peer-analysis}/README.md           |   0
+ {peer-analysis => drafts/peer-analysis}/content-view/1.png  | Bin
+ {peer-analysis => drafts/peer-analysis}/content-view/2.png  | Bin
+ {peer-analysis => drafts/peer-analysis}/content-view/3.png  | Bin
+ .../peer-analysis}/content-view/README.md                   |   0
+ {peer-analysis => drafts/peer-analysis}/main-page/1.png     | Bin
+ {peer-analysis => drafts/peer-analysis}/main-page/2.png     | Bin
+ {peer-analysis => drafts/peer-analysis}/main-page/README.md |   0
+ .../peer-analysis}/peer-analysis/README.md                  |   0
+ .../peer-analysis}/peer-analysis/content-view/1.png         | Bin
+ .../peer-analysis}/peer-analysis/content-view/2.png         | Bin
+ .../peer-analysis}/peer-analysis/content-view/3.png         | Bin
+ .../peer-analysis}/peer-analysis/content-view/README.md     |   0
+ .../peer-analysis}/peer-analysis/main-page/1.png            | Bin
+ .../peer-analysis}/peer-analysis/main-page/2.png            | Bin
+ .../peer-analysis}/peer-analysis/main-page/README.md        |   0
+ .../peer-analysis}/peer-analysis/report/1.png               | Bin
+ .../peer-analysis}/peer-analysis/report/README.md           |   0
+ .../peer-analysis}/peer-analysis/search-banner/1.png        | Bin
+ .../peer-analysis}/peer-analysis/search-banner/2.png        | Bin
+ .../peer-analysis}/peer-analysis/search-banner/README.md    |   0
+ {peer-analysis => drafts/peer-analysis}/report/1.png        | Bin
+ {peer-analysis => drafts/peer-analysis}/report/README.md    |   0
+ {peer-analysis => drafts/peer-analysis}/search-banner/1.png | Bin
+ {peer-analysis => drafts/peer-analysis}/search-banner/2.png | Bin
+ .../peer-analysis}/search-banner/README.md                  |   0
+ 48 files changed, 0 insertions(+), 0 deletions(-)
 
 commit 95d091912d0b0533497e9f266cd45cf526e8ffd5
 Author: VinaLx <vinaleux@gmail.com>
@@ -228,11 +511,17 @@ Date:   Sun Mar 25 23:26:12 2018 +0800
 
     update readme: add meeting-mind-graph and peer-analysis intro, fix github pages link
 
+ Readme.md | 7 ++++---
+ 1 file changed, 4 insertions(+), 3 deletions(-)
+
 commit 31d29e13dd11927415ccf854a39a07598d5f3690
 Author: VinaLx <vinaleux@gmail.com>
 Date:   Sat Mar 24 21:08:38 2018 +0800
 
     add team profile
+
+ management-docs/team-profile.md | 26 ++++++++++++++++++++++++++
+ 1 file changed, 26 insertions(+)
 
 commit b8ad69ba9be979be43e8927782ce8fa5fd0c1826
 Author: VinaLx <vinaleux@gmail.com>
@@ -240,11 +529,18 @@ Date:   Sat Mar 24 20:49:34 2018 +0800
 
     fix about.md links
 
+ management-docs/about.md | 8 ++++----
+ 1 file changed, 4 insertions(+), 4 deletions(-)
+
 commit 6ea08e4002e08c0759adf2f7fe3a9004bb25fd6a
 Author: VinaLx <vinaleux@gmail.com>
 Date:   Sat Mar 24 20:46:38 2018 +0800
 
     add about and meeting-record
+
+ management-docs/about.md                    |  35 ++++++++++++++++++++++++++++
+ meeting-mind-graphs/3-23-2018-inception.pdf | Bin 0 -> 46517 bytes
+ 2 files changed, 35 insertions(+)
 
 commit 9fa32f09a7389ce5ac9081cbfc441812853670fb
 Author: VinaLx <vinaleux@gmail.com>
@@ -252,11 +548,27 @@ Date:   Sat Mar 24 18:20:32 2018 +0800
 
     add brief vision document
 
+ management-docs/vision.md | 65 +++++++++++++++++++++++++++++++++++++++++++++++
+ 1 file changed, 65 insertions(+)
+
 commit b6600ab94a92ea90f972305fbee703d585762854
 Author: VinaLx <vinaleux@gmail.com>
 Date:   Fri Mar 23 18:33:58 2018 +0800
 
     add Readme and placeholders for (potential) docs
+
+ Readme.md                                 | 13 +++++++++++++
+ management-docs/about.md                  |  0
+ management-docs/investigation.md          |  0
+ management-docs/product.md                |  0
+ management-docs/team-profile.md           |  0
+ management-docs/vision.md                 |  0
+ model-docs/use-case-model.md              |  0
+ technical-docs/backend-tech-stack.md      |  0
+ technical-docs/web-frontend-tech-stack.md |  0
+ technical-docs/web-ui-standard.md         |  0
+ 10 files changed, 13 insertions(+)
+
 ```
 ## 工作清单
 
