Update liangtj's final report

--- a/docs/reports/final/15331184.md
+++ b/docs/reports/final/15331184.md
@@ -1,12 +1,12 @@
 
 # 系统分析与设计期末报告
-15331184  [liangtj](https://github.com/liangtj)
+15331184   [@liangtj](https://github.com/liangtj)
 
 ## 课堂学习自我总结
 
 首先，作为前端开发负责人，主要负责前端架构的搭建，各层服务的封装和核心功能的实现。在抽象与封装，需求不断变化的过程中，逐渐明白一个可伸缩，层次高度分离的前端架构的重要性，在设计思想上有更深的体会。
 
-同时，也意识到主动承担责任，合理评估组员能力，以分配适当任务的重要性。如果发现组员无法合理完成任务，要反省一下自己分配任务的合理性，甚至可以工作迁移，以避免拖延工期。
+同时，也意识到主动承担责任，合理评估组员能力，以分配适当任务的重要性。如果发现组员无法合理完成任务，要反省一下自己分配任务的合理性，甚至可以工作迁移，以避免拖延工期。同时也感谢[@Binly42](https://github.com/Binly42)能bug-free地完成指定任务，并在后期对我提供帮助
 
 至于课程，主要是画图。在学习UML图的过程中，虽然课程说的总体上和维基上讲的一致，但是也有不少细节是不一样的，让人感到困惑，但是总体来说是对这门课满意。
 
