Update liangtj's final report

--- a/docs/reports/final/15331184.md
+++ b/docs/reports/final/15331184.md
@@ -33,7 +33,7 @@
 
 此部分包括[documents](https://github.com/Chun-Ge/documents)中的提交记录，和[Shudong-Frontend](https://github.com/Chun-Ge/Shudong-Frontend/)中的提交记录。
 
-[documents](https://github.com/Chun-Ge/documents)中
+先是[documents](https://github.com/Chun-Ge/documents)中
 
 ```
 commit d489c72e6486f947a73bae210708b72a3e28b91c
