Add screenshots for contributions

--- a/docs/reports/final/15331172.md
+++ b/docs/reports/final/15331172.md
@@ -36,7 +36,13 @@
 
 注：我负责后台服务的开发，上表中的贡献比，为在后端开发过程中的占比。
 
-## Git Log
+## Git Log （个人分支的 Git 统计报告）
+
+Backend仓库的贡献图：
+![Shudong Backend](https://github.com/Chun-Ge/documents/blob/master/docs/reports/final/15331172/contributors-backend.PNG)
+
+Document仓库的贡献图：
+![Document](https://github.com/Chun-Ge/documents/blob/master/docs/reports/final/15331172/contributors-document.PNG)
 
 此部分包括[documents](https://github.com/Chun-Ge/documents)中的提交记录，和[Shudong-Backend](https://github.com/Chun-Ge/Shudong-Backend)中的提交记录。
 
