--- a/docs/reports/final/15331146.md
+++ b/docs/reports/final/15331146.md
@@ -19,14 +19,14 @@
 |Stage|Time (Percent)|
 |：----|：----：|
 |Estimate 估计任务时间|	35%|
-|Analysis 需求分析|	s
-|Design Spec 设计文档	20%
-|Design Review 设计复审	1%
-|Coding Standard 代码规范	1%
-|Design 设计	30%
-|Coding 编码	40%
-|Code Review 代码复审	20%
-|Test 测试	35%
-|Test Report 测试报告	25%
-|Size Measurement 计算工作量	30%
-|Postmortem 事后总结	30%
+|Analysis 需求分析|	20%|
+|Design Spec 设计文档|	15%|
+|Design Review 设计复审	|1%|
+|Coding Standard 代码规范	|5%|
+|Design 设计	|10%|
+|Coding 编码	|30%|
+|Code Review 代码复审	|20%|
+|Test 测试	|15%|
+|Test Report 测试报告	|0%|
+|Size Measurement 计算工作量	|25%|
+|Postmortem 事后总结	|15%|
