--- a/docs/reports/final/15331146.md
+++ b/docs/reports/final/15331146.md
@@ -15,11 +15,9 @@
 
 最后最是设计上的思考，如何去抽象，如何组织项目的结构，以及系统的架构，有了实际的思考的体验。
 
-# PSP(Personal Software Process) 2.1
+## PSP(Personal Software Process) 2.1
 |Stage | Time (Percent)|
-|：----|：----：|
-|s|s|
-
+|:----:|:----:|
 |Estimate 估计任务时间|	35%|
 |Analysis 需求分析|	20%|
 |Design Spec 设计文档|	15%|
@@ -32,3 +30,18 @@
 |Test Report 测试报告	|0%|
 |Size Measurement 计算工作量	|25%|
 |Postmortem 事后总结	|15%|
+
+## Git log
+### document:
+
+
+## 工作清单
+### 后台开发
++ 实现功能 发布帖子、删除帖子、恢复帖子、删除恢复
++ api设计修改
+
+### 文旦
++ 领域模型
++ 架构问题
++ BCE
++ 数据库设计
