--- a/docs/reports/final/15331146.md
+++ b/docs/reports/final/15331146.md
@@ -33,6 +33,205 @@
 
 ## Git log
 ### document:
+Commits on Jul 1, 2018
+Update 15331146.md
+@Boyce-Lee
+Boyce-Lee committed 7 minutes ago
+Verified  16b4d12  
+Update 15331146.md
+@Boyce-Lee
+Boyce-Lee committed 13 minutes ago
+Verified  db7680e  
+Update 15331146.md
+@Boyce-Lee
+Boyce-Lee committed 15 minutes ago
+Verified  b8bdc07  
+Update 15331146.md
+@Boyce-Lee
+Boyce-Lee committed 17 minutes ago
+Verified  59b56fc  
+Commits on Jun 6, 2018
+Create SAD_architacture_problems.md
+@Boyce-Lee
+Boyce-Lee committed 25 days ago
+Verified  f01bb41  
+Commits on May 12, 2018
+Delete logical-database-design.pdf
+@Boyce-Lee
+Boyce-Lee committed on 12 May
+Verified  a289e21  
+Commits on May 10, 2018
+Add files via upload
+@Boyce-Lee
+Boyce-Lee committed on 10 May
+Verified  dd041ce  
+Commits on Apr 28, 2018
+database-model
+@Boyce-Lee
+Boyce-Lee committed on 28 Apr
+Verified  f94272c  
+Commits on Apr 15, 2018
+Update 15331146-report-4-15.md
+@Boyce-Lee
+Boyce-Lee committed on 15 Apr
+Verified  15f9c57  
+Create 15331146-report-4-15.md
+@Boyce-Lee
+Boyce-Lee committed on 15 Apr
+Verified  345ae33  
+Commits on Mar 26, 2018
+edit the sql for database scheme
+@Boyce-Lee
+Boyce-Lee committed on 26 Mar
+Verified  02fafab  
+Add files via upload
+@Boyce-Lee
+Boyce-Lee committed on 26 Mar
+Verified  eff8324  
+Add files via upload
+@Boyce-Lee
+Boyce-Lee committed on 26 Mar
+Verified  f74c535  
+Add files via upload
+@Boyce-Lee
+Boyce-Lee committed on 26 Mar
+Verified  a1a537d  
+Delete logical_database_design.pdf
+@Boyce-Lee
+Boyce-Lee committed on 26 Mar
+Verified  0266531  
+logical database design
+@Boyce-Lee
+Boyce-Lee committed on 26 Mar
+Verified  ddd75de  
+Commits on Mar 25, 2018
+Update team-profile.md
+@Boyce-Lee
+Boyce-Lee committed on 25 Mar
+
+### backend
+Commits on Jun 11, 2018
+update SecretKey periodically
+@Boyce-Lee
+Boyce-Lee committed 20 days ago
+
+628b498  
+fix change password func
+@Boyce-Lee
+Boyce-Lee committed 20 days ago
+
+5aa45b9  
+Commits on Jun 6, 2018
+fix database connecting error
+@Boyce-Lee
+Boyce-Lee committed 26 days ago
+
+ed41ec3  
+fix database connecting error
+@Boyce-Lee
+Boyce-Lee committed 26 days ago
+4fcdf6e  
+fix database connectng error
+@Boyce-Lee
+Boyce-Lee committed 26 days ago
+193e63a  
+Commits on Jun 5, 2018
+fix database connecting errors
+@Boyce-Lee
+Boyce-Lee committed 26 days ago
+56da48a  
+Commits on Jun 4, 2018
+Merge pull request #75 from Chun-Ge/hotfix/fix-route  …
+@Boyce-Lee
+Boyce-Lee committed 27 days ago
+Verified  22e7083  
+Merge branch 'dev' into hotfix/fix-route
+@Boyce-Lee
+Boyce-Lee committed 27 days ago
+
+Verified  3d32808  
+Merge pull request #76 from Chun-Ge/hotfix/cobra-command  …
+@Boyce-Lee
+Boyce-Lee committed 27 days ago
+Verified  0d6909a  
+Merge branch 'dev' into hotfix/cobra-command
+@Boyce-Lee
+Boyce-Lee committed 27 days ago
+
+Verified  690c7c8  
+Commits on Jun 3, 2018
+add cobra commad
+@Boyce-Lee
+Boyce-Lee committed 28 days ago
+
+f810089  
+fix route.go
+@Boyce-Lee
+Boyce-Lee committed 28 days ago
+1311264  
+update route.go according to the apiary file
+@Boyce-Lee
+Boyce-Lee committed 28 days ago
+d3dc147  
+Commits on Jun 1, 2018
+rewrite route.go
+@Boyce-Lee
+Boyce-Lee committed on 1 Jun
+093a04a  
+Commits on May 29, 2018
+Merge pull request #67 from Chun-Ge/hotfix/service-test-debug  …
+@Boyce-Lee
+Boyce-Lee committed on 29 May
+Verified  4b579fb  
+fix some bugs when service-testing
+@Boyce-Lee
+Boyce-Lee committed on 29 May
+7729909  
+fix the spelling error of func GenAuthCode and register routers
+@Boyce-Lee
+Boyce-Lee committed on 29 May
+9a31f65  
+Commits on May 28, 2018
+finish
+@Boyce-Lee
+Boyce-Lee committed on 28 May
+
+3604f27  
+Commits on May 26, 2018
+Merge branch 'feature/delete' of https://github.com/Chun-Ge/Shudong-B…  …
+@Boyce-Lee
+Boyce-Lee committed on 26 May
+
+00945f9  
+Merge pull request #51 from Chun-Ge/feature/create-post-and-comment  …
+@Boyce-Lee
+Boyce-Lee committed on 26 May
+Verified  58540b5  
+Commits on May 23, 2018
+add route map for deleting post and comment
+@Boyce-Lee
+Boyce-Lee committed on 23 May
+
+d03d032  
+finish the func delete post and delete comment
+@Boyce-Lee
+Boyce-Lee committed on 23 May
+5abbdd6  
+add route for post and comment
+@Boyce-Lee
+Boyce-Lee committed on 23 May
+
+eea065b  
+fix some tiny errors in service/upvotin*
+@Boyce-Lee
+Boyce-Lee committed on 23 May
+
+6369b94  
+boyce: create post and create comment
+@Boyce-Lee
+Boyce-Lee committed on 23 May
+c670c97  
+NewerOlder
 
 
 ## 工作清单
