--- a/docs/reports/final/15331146.md
+++ b/docs/reports/final/15331146.md
@@ -32,6 +32,12 @@
 |Postmortem 事后总结	|15%|
 
 ## Git log
+backend贡献图
+![image](https://github.com/Chun-Ge/documents/raw/master/docs/reports/final/15331172/contributors-backend.PNG)
+
+document贡献图
+![image](https://github.com/Chun-Ge/documents/raw/master/docs/reports/final/15331172/contributors-document.PNG)
+
 ### document:
 Commits on Jul 1, 2018
 Update 15331146.md
