--- a/docs/reports/final/15331184.md
+++ b/docs/reports/final/15331184.md
@@ -29,6 +29,19 @@
 
 注：我负责前端业务的开发，上表中的贡献比，为在前端开发过程中的占比。
 
+## Git Commit Graph
+
+> 本人 [@liangtj](https://github.com/liangtj)
+
+Frontend: 
+
+![Frontend](./15331184/Frontend.png)
+
+document:
+
+![document](./15331184/document.png)
+
+
 ## Git Log
 
 此部分包括[documents](https://github.com/Chun-Ge/documents)中的提交记录，和[Shudong-Frontend](https://github.com/Chun-Ge/Shudong-Frontend/)中的提交记录。
