--- a/docs/reports/final/软件设计文档（前端）.md
+++ b/docs/reports/final/软件设计文档（前端）.md
@@ -3,7 +3,7 @@
 
 ## 说明
 
-我们这次前端的 **技术选型**, **架构设计** 工作参见 前端组长 梁天骏 (@liangtj) 的 [工作报告](https://chun-ge.github.io/documents/reports/technical/15331184-report-4-14.html) ;
+我们这次前端的 **技术选型**, **架构设计** 工作可以参见 [技术栈文档](https://github.com/Chun-Ge/documents/blob/master/docs/technical-docs/web-frontend-tech-stack.md) 及 [前端组长 梁天骏 (@liangtj) 的 工作报告](https://chun-ge.github.io/documents/reports/technical/15331184-report-4-14.html) ;
 
 主要就是依托于 vue 及其生态进行开发设计, 因而 **模块设计** 也是典型的 `组件/页面/路由/数据/服务` 划分方式 ;
 
