--- a/docs/reports/final/软件设计文档（后端）.md
+++ b/docs/reports/final/软件设计文档（后端）.md
@@ -4,7 +4,14 @@
 
 ## 技术选型
 
-使用Go-iris框架。 
+### 后端语言 golang
+
+理由：
+- 对高并发提供语言级别支持
+- 语法简单，上手容易
+- 开发效率高
+
+### 使用Go-iris框架。 
 
 理由：
 
@@ -24,7 +31,9 @@
 - service层：每个具体功能的应用逻辑，使用model层的操作函数。
 - 最上层：iris提供的路由，包括路由，并且可以自定义中间件。
 
+整体架构图
 
+![phyview.png](https://github.com/Chun-Ge/documents/blob/master/docs/model-docs/physical-view/phyview.png?raw=true) 
 
 ## 模块划分
 
@@ -47,9 +56,3 @@
 ![uml-package.png](https://github.com/Chun-Ge/documents/blob/master/docs/model-docs/logical-view/uml-package.png?raw=true) 
 
 
-
-
-
-整体架构图
-
-![phyview.png](https://github.com/Chun-Ge/documents/blob/master/docs/model-docs/physical-view/phyview.png?raw=true) 
