--- a/docs/reports/final/软件设计文档（后端）.md
+++ b/docs/reports/final/软件设计文档（后端）.md
@@ -29,7 +29,11 @@
 - （底层： go-xorm连接mysql数据库）
 - entity&model层，定义数据实体格式&数据元操作（CRUD）
 - service层：每个具体功能的应用逻辑，使用model层的操作函数。
-- 最上层：iris提供的路由，包括路由，并且可以自定义中间件。
+- 最上层：iris提供的路由，包括路由，并且可以自定义中间件
+
+领域模型
+![domai.pnh](https://github.com/Chun-Ge/documents/blob/master/docs/model-docs/domain-model/domain-model.png)
+
 
 整体架构图
 
