--- a/docs/reports/final/软件设计文档（后端）.md
+++ b/docs/reports/final/软件设计文档（后端）.md
@@ -4,6 +4,12 @@
 
 ## 技术选型
 
+### 前后端完全分离
+理由：
+- 前后端解耦，提高开发效率
+- 细化系统逻辑结构、便于迭代开发
+
+
 ### 后端语言 golang
 
 理由：
@@ -19,6 +25,19 @@
 - 开发速度快，不需要特定的框架代码，可以自由组织开发
 - 官方文档和用例充足实用，易于学习
 - 声称速度最快
+
+### JWT 用户会话跟踪、授权
+理由
+- 协议简单
+- 便于传输
+- 与前后端分离技术适配
+- 避免服务端session记录的开销
+- 安全性足够
+
+### xorm作为orm工具
+- 减小数据库
+
+
 
 
 
